@@ -22,6 +22,7 @@
 package io.crate.integrationtests;
 
 import io.crate.action.sql.SQLActionException;
+import io.crate.action.sql.SQLBulkResponse;
 import io.crate.test.integration.CrateIntegrationTest;
 import io.crate.testing.TestingHelpers;
 import org.elasticsearch.action.get.GetResponse;
@@ -683,5 +684,26 @@ public class InsertIntoIntegrationTest extends SQLTransportIntegrationTest {
                 "destination| custom| 04332c1i6gpg| {zipcode=10243}| 5| 0\n" +
                 "destination| custom| 04332d1n64pg| {zipcode=14713}| 5| 0\n"));
 
+    }
+
+    @Test
+    public void testBulkInsert() throws Exception {
+        execute("create table giveittome (" +
+                "  date timestamp," +
+                "  dirty_names array(string)," +
+                "  lashes short primary key" +
+                ") with (number_of_replicas=0)");
+        ensureYellow();
+        int bulkSize = randomIntBetween(1, 1000);
+        Object[][] bulkArgs = new Object[bulkSize][];
+        for (int i = 0; i < bulkSize; i++) {
+            bulkArgs[i] = new Object[] { System.currentTimeMillis() + i, new String[]{randomAsciiOfLength(5), randomAsciiOfLength(2)}, (short)i };
+        }
+        SQLBulkResponse bulkResponse = execute("insert into giveittome (date, dirty_names, lashes) values (?, ?, ?)", bulkArgs);
+        assertThat(bulkResponse.results().length, is(bulkSize));
+        execute("refresh table giveittome");
+        // assert that bulk insert has inserted everything it said it has
+        execute("select sum(lashes), date from giveittome group by date");
+        assertThat(response.rowCount(), is((long)bulkSize));
     }
 }
