@@ -5,7 +5,10 @@ Changes for Crate
 Unreleased
 ==========
 
- - The ``format`` scalar function now always uses Locale.ENGLISH
+ - Fix: Do not shutdown the BulkShardProcessor while there are pending requests
+   anymore
+
+ - Fix: The ``format`` scalar function now always uses Locale.ENGLISH
 
  - Fixed misleading error message for trying to group by invalid data type.
 
